logs/tablib_pipbuild.log
Package search: {'_pypi_ordering': False, 'version': '0.10.0', 'name': 'tablib', 'summary': 'Format agnostic tabular data library (XLS, JSON, YAML, CSV)'}
Fetching package metadata: ....
Removing old build directory
Removing old work directory
BUILD START: tablib-0.10.0-py27_0
Fetching package metadata: ......
Solving package specifications: .+ pip install tablib
Collecting tablib
  Downloading http://localhost/packages/2.7/t/tablib/tablib-0.10.0-py2.py3-none-any.whl (864kB)
Installing collected packages: tablib
Successfully installed tablib-0.10.0
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/__init__.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/__init__.py", line 855
    print("mem: %s, base: %d, len: %d" % (type(self.mem), self.base, self.stream_len), file=self.logfile)
                                                                                           ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/biffh.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/biffh.py", line 386
    print(header, file=f)
                      ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/compdoc.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/compdoc.py", line 89
    print("\nCompDoc format: version=0x%04x revision=0x%04x" % (version, revision), file=logfile)
                                                                                        ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/formatting.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/formatting.py", line 589
    print("%2d: %r -> %r" % (i, old_rgb, new_rgb), file=book.logfile)
                                                       ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/formula.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/formula.py", line 794
    if verbose: print("tIsect pre", stack, file=bk.logfile)
                                               ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/sheet.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlrd3/sheet.py", line 466
    print("put_cell", rowx, colx, file=self.logfile)
                                      ^
SyntaxError: invalid syntax

Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlwt3/antlr.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/tablib/packages/xlwt3/antlr.py", line 1946
    print(fmt % (line,col,text), file=sys.stderr)
                                     ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.3-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/tablib to /home/ubuntu/miniconda/conda-bld/work
Package: tablib-0.10.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Creating standard recipe for tablib-0.10.0
Converting recipe in /home/ubuntu/pypi-conda-builds/tablib
package = tablib
   dependencies = []
Building conda package for tablib
